vlib/v/checker/tests/private_redeclaration_of_C_timeval.vv
import module_with_redeclaration as mr
import time

const used = mr.used

fn main() {
	dump(time.now()) // ensure `time` is used
	//
	ts := C.timeval{}
	dump(ts)
}
